Shade and remove Guava from public API signatures
This set of changes aims to accomplish 3 things:
1. remove Guava from any Milo public API signatures
2. shade the Guava dependency and hide it from downstream consumers
3. refactor/remove unnecessary usages of Guava classes